# qc-openscenarioxml

./: .gitignore  README.md  checker_bundle_doc.md  config.json  format.json  main.py  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
.github/ISSUE_TEMPLATE/: meeting-minutes-template.md
checks/schema_checks/: __init__.py  check_conventions.py
checks/schema_checks/schema/: schema_files.py
doc/: documentation_checks_OpenSCENARIO.docx
licenses/: readme.md
manifest_templates/: linux_manifest.json  windows_xosc_manifest.json
original_implementation/checks/base_checks/: __init__.py
original_implementation/checks/schema_checks/: check_schema.py  check_version.py
qc_openscenario/: __main__.py  basic_preconditions.py  constants.py  main.py
qc_openscenario/checks/: __init__.py  models.py  utils.py
qc_openscenario/checks/basic_checker/: __init__.py  basic_checker.py  basic_constants.py  fileheader_is_present.py  is_an_xml_document.py  root_tag_is_openscenario.py  valid_xml_document.py  version_is_defined.py
qc_openscenario/checks/data_type_checker/: __init__.py  allowed_operators.py  data_type_checker.py  data_type_constants.py  non_negative_transition_time_in_light_state_action.py  positive_duration_in_phase.py
qc_openscenario/checks/parameters_checker/: __init__.py  parameters_checker.py  (+2 more)
qc_openscenario/schema/: schema_files.py
tests/: test_basic_checks.py  test_data_type_checks.py  test_main_executor.py  test_parameters_checks.py  test_reference_checks.py  test_schema_checks.py  test_utils.py  test_xml_checks.py
(+85 files in other folders)
